# pyminitab

./: .gitignore  pyproject.toml  readme.md
pyminitab/: __init__.py  main.py
tests/: data.xlsx  draw_test.py
