[tool.poetry]
name = "pyminitab"
version = "0.3.1"
description = "Emulating minitab type plots for engineering projects"
authors = ["spartyhacker <spartyhacker@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.5.2"
matplotlib = ">=3.7.0"
scipy = ">=1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
